# vane-mcp-server

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.sh
config/: cursor.json  opencode.json
searxng/: settings.yml
src/vane_mcp/: __init__.py  client.py  server.py
