[project]
name = "vane-mcp-server"
version = "1.0.0"
description = "MCP Server for Vane AI Search Engine — web search, deep research, and cited answers"
authors = [{ name = "Vane MCP Contributors" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.14.0",
    "httpx>=0.28.0",
]

[project.scripts]
vane-mcp = "vane_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vane_mcp"]

[tool.uv]
dev-dependencies = []
